/*
Copyright 2019 The KubeCarrier Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package kubecarrier.api.v1;
option go_package = "v1";

message ObjectReference { string name = 1; }

message CRDInformation {
  string name = 1;
  string apiGroup = 2;
  string kind = 3;
  string plural = 4;
  repeated CRDVersion versions = 5;
  ObjectReference region = 6;
}

message CRDVersion {
  // name is the version name, e.g. “v1”, “v2beta1”, etc.
  string name = 1;
  // schema describes the schema used for validation, pruning, and defaulting of this version of the custom resource.
  string schema = 2;
  // storage indicates this version should be used when persisting custom resources to storage.
  // There must be exactly one version with storage=true.
  bool storage = 3;
}

message Image {
  string mediaType = 1;
  bytes data = 2;
}

message ConditionStatus {
  string status = 1;
}
